<resources>
    <string name="app_name">Calculator</string>
    <string name="calculatorOutput">0</string>
    <string name="button">Button</string>
    <string name="decimal">.</string>
    <string name="equalSign">=</string>
    <string name="zero">0</string>
    <string name="nine">9</string>
    <string name="three">3</string>
    <string name="one">1</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="two">2</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="multiply">*</string>
    <string name="subtraction">-</string>
    <string name="addition">+</string>
    <string name="backspace">\u232b</string>
    <string name="clear">clear</string>
    <string name="empty" />


    <string name="buttonWidth">85</string>
    <string name="buttonHeight">85</string>
    <string name="buttonFont">25sp</string>
    <string name="divide">/</string>
    <string name="previousexpression">PreviousExpression</string>

</resources>
