<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".view.MainActivity">

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/operationsGrid"
        android:layout_width="340dp"
        android:layout_height="340dp"
        android:layout_marginTop="380dp"
        android:layout_marginBottom="45dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75"
        app:useDefaultMargins="true">

        <Button
                android:id="@+id/button0"
                android:layout_width="77dp"
                android:layout_height="77dp"
                android:background="@drawable/button_press"
                android:text="@string/zero"
                android:textColor="@color/textColor"
                android:textSize="25sp"
                app:layout_column="1"
                app:layout_row="3" />

        <Button
                android:id="@+id/button1"
                android:layout_width="77dp"
                android:layout_height="77dp"
                android:background="@drawable/button_press"
                android:text="@string/one"
                android:textColor="@color/textColor"
                android:textSize="25sp"
                app:layout_column="0"
                app:layout_row="2" />

        <Button
                android:id="@+id/button2"
                android:layout_width="77dp"
                android:layout_height="77dp"
                android:background="@drawable/button_press"
                android:text="@string/two"
                android:textColor="@color/textColor"
                android:textSize="25sp"
                app:layout_column="1"
                app:layout_row="2" />

        <Button
                android:id="@+id/button3"
                android:layout_width="77dp"
                android:layout_height="77dp"
                android:background="@drawable/button_press"
                android:text="@string/three"
                android:textColor="@color/textColor"
                android:textSize="25sp"
                app:layout_column="2"
                app:layout_row="2" />

        <Button
                android:id="@+id/button4"
                android:layout_width="77dp"
                android:layout_height="77dp"
                android:background="@drawable/button_press"
                android:text="@string/four"
                android:textColor="@color/textColor"
                android:textSize="25sp"
                app:layout_column="0"
                app:layout_row="1" />

        <Button
                android:id="@+id/button5"
                android:layout_width="77dp"
                android:layout_height="77dp"
                android:background="@drawable/button_press"
                android:text="@string/five"
                android:textColor="@color/textColor"
                android:textSize="25sp"
                app:layout_column="1"
                app:layout_row="1" />

        <Button
                android:id="@+id/button6"
                android:layout_width="77dp"
                android:layout_height="77dp"
                android:background="@drawable/button_press"
                android:text="@string/six"
                android:textColor="@color/textColor"
                android:textSize="25sp"
                app:layout_column="2"
                app:layout_row="1" />

        <Button
                android:id="@+id/button7"
                android:layout_width="77dp"
                android:layout_height="77dp"
                android:background="@drawable/button_press"
                android:text="@string/seven"
                android:textColor="@color/textColor"
                android:textSize="25sp"
                app:layout_column="0"
                app:layout_row="0" />

        <Button
                android:id="@+id/button8"
                android:layout_width="77dp"
                android:layout_height="77dp"
                android:background="@drawable/button_press"
                android:text="@string/eight"
                android:textColor="@color/textColor"
                android:textSize="25sp"
                app:layout_column="1"
                app:layout_row="0" />

        <Button
                android:id="@+id/button9"
                android:layout_width="77dp"
                android:layout_height="77dp"
                android:background="@drawable/button_press"
                android:text="@string/nine"
                android:textColor="@color/textColor"
                android:textSize="25sp"
                app:layout_column="2"
                app:layout_row="0" />

        <Button
                android:id="@+id/buttonEqual"
                android:layout_width="77dp"
                android:layout_height="77dp"
                android:background="@drawable/button_press"
                android:text="@string/equalSign"
                android:textColor="@color/textColor"
                android:textSize="25sp"
                app:layout_column="0"
                app:layout_row="3" />

        <Button
                android:id="@+id/button11"
                android:layout_width="77dp"
                android:layout_height="77dp"
                android:background="@drawable/button_press"
                android:text="@string/decimal"
                android:textColor="@color/textColor"
                android:textSize="25sp"
                app:layout_column="2"
                app:layout_row="3" />

        <Button
            android:id="@+id/buttonDivision"
            android:layout_width="77dp"
            android:layout_height="77dp"
            android:background="@drawable/button_press"
            android:text="@string/divide"
            android:textColor="@color/textColor"
            android:textSize="25sp"
            app:layout_column="3"
            app:layout_row="3"
            tools:text="÷" />

        <Button
            android:id="@+id/buttonMultiplication"
            android:layout_width="77dp"
            android:layout_height="77dp"
            android:background="@drawable/button_press"
            android:text="@string/multiply"
            android:textColor="@color/textColor"
            android:textSize="25sp"
            app:layout_column="3"
            app:layout_row="2"
            tools:text="x" />

        <Button
            android:id="@+id/buttonSubtraction"
            android:layout_width="77dp"
            android:layout_height="77dp"
            android:background="@drawable/button_press"
            android:text="@string/subtraction"
            android:textColor="@color/textColor"
            android:textSize="25sp"
            app:layout_column="3"
            app:layout_row="1"
            tools:text="-" />

        <Button
            android:id="@+id/buttonAddition"
            android:layout_width="77dp"
            android:layout_height="77dp"
            android:background="@drawable/button_press"
            android:text="@string/addition"
            android:textColor="@color/textColor"
            android:textSize="25sp"
            app:layout_column="3"
            app:layout_row="0"
            tools:text="+" />

    </androidx.gridlayout.widget.GridLayout>

    <TextView
        android:id="@+id/currentExpression"
        android:layout_width="330dp"
        android:layout_height="180dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:gravity="bottom|end"
        android:text="@string/calculatorOutput"
        android:textColor="@color/textColor"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/operationsGrid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
            android:id="@+id/backspace"
            android:layout_width="77dp"
            android:layout_height="55dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/button_press"
            android:text="@string/backspace"
            android:textColor="@color/textColor"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/operationsGrid"
            app:layout_constraintEnd_toEndOf="@+id/operationsGrid"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/currentExpression"
            app:layout_constraintVertical_bias="1.00"
            tools:ignore="RtlHardcoded" />

    <Button
            android:id="@+id/clear"
            android:layout_width="77dp"
            android:layout_height="55dp"
            android:layout_marginStart="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/button_press"
            android:text="@string/clear"
            android:textColor="@color/textColor"
            app:layout_constraintBottom_toTopOf="@+id/operationsGrid"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.01"
            app:layout_constraintStart_toStartOf="@+id/operationsGrid"
            app:layout_constraintTop_toBottomOf="@+id/currentExpression"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="RtlHardcoded" />

    <TextView
            android:id="@+id/previousExpression"
            android:layout_width="330dp"
            android:layout_height="70dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="320dp"
            android:text="@string/previousexpression"
            android:textColor="@color/previousText"
            android:textSize="30sp"
            android:gravity="bottom|end"
            app:layout_constraintBottom_toTopOf="@+id/operationsGrid"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>